# CppProject

./: .gitignore  ModularSynth.sln  README.md
ESCAPI/: ESCAPI.vcxproj  ESCAPI.vcxproj.filters  conversion.h  escapi.cpp  escapi.h  interface.cpp
ModularSynth/: Animator.h  Application.cpp  Application.h  Audio.cpp  Audio.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorWheel.cpp  ColorWheel.h  Control.cpp  Control.h  Edit.cpp  Edit.h  EventSystem.h  GUISystem.cpp  GUISystem.h  GraphicsNode.cpp  GraphicsNode.h  Icons.hpp  Knob.cpp  Knob.h  Label.cpp  Label.h  LineEditor.cpp  LineEditor.h  ModularSynth.vcxproj  ModularSynth.vcxproj.filters  NodeEditor.cpp  NodeEditor.h  NodeGraph.cpp  NodeGraph.h  Panel.cpp  Panel.h  RadioSelector.cpp  RadioSelector.h  ScrollBar.cpp  ScrollBar.h  (+24 more)
ModularSynth/glad/: CMakeLists.txt  glad.c  glad.h  glad_wgl.c  glad_wgl.h
ModularSynth/nanovg/: CMakeLists.txt  fontstash.h  nanovg_gl.h  stb_truetype.h
